# online_mart

./: My Read Me.md  README.md  compose.yaml
My Read Me/: Combining Code.md  Git Clone.md  Previous Read Me.md  Repo Structure.md
services/inventory_service/: Dockerfile  pyproject.toml
services/inventory_service/inventory_service/: db.py  main.py  models.py  settings.py
services/inventory_service/inventory_service/helpers/: consumer_helpers.py  producer_helpers.py
services/notification_service/: .env_backup  Dockerfile  pyproject.toml
services/notification_service/notification_service/: db.py  main.py  models.py  settings.py
services/notification_service/notification_service/helpers/: notification_helpers.py  orders_helpers.py  payment_helpers.py  user_helpers.py
services/notification_service/notification_service/kafka/: order_consumer.py  payment_consumer.py  user_consumer.py
services/notification_service/notification_service/proto/: user.proto
services/order_service/: Dockerfile  pyproject.toml
services/order_service/order_service/: db.py  main.py  models.py  settings.py
services/payment_service/: Dockerfile  pyproject.toml
services/payment_service/payment_service/: db.py  main.py  models.py  payment_pb2.py  settings.py
services/payment_service/payment_service/helpers/: order_consumer_helpers.py  producer_helpers.py  user_consumer_helpers.py
services/payment_service/payment_service/kafka/consumers/: order_consumer.py  user_consumer.py
services/payment_service/payment_service/kafka/producers/: payment_producer.py  payment_topic.py
services/payment_service/payment_service/proto/: payment.proto
services/payment_service/payment_service/stripe/: stripe_service.py
services/product_db_service/: .env  Dockerfile  pyproject.toml
services/product_db_service/product_db/: db.py  main.py  models.py  setting.py
services/product_db_service/product_db/helpers/: helpers.py
services/product_db_service/product_db/proto/: product.proto  product_pb2.py
services/product_service/: .env  Dockerfile  pyproject.toml
services/product_service/products/: db.py  main.py  models.py  setting.py
services/user_service/: .env  Dockerfile  pyproject.toml
services/user_service/user_service/: auth.py  db.py  main.py  models.py  setting.py
services/user_service/user_service/helpers/: helpers.py
services/user_service/user_service/kafka/: create_topic.py  producer.py
services/user_service/user_service/proto/: user.proto  user_pb2.py
(+19 files in other folders)
